manifests/istio/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: spring-jooq-k8s-deployment
  labels:
    app: spring-jooq-k8s-deployment
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: spring-jooq-k8s-deployment
  template:
    metadata:
      labels:
        app: spring-jooq-k8s-deployment
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      containers:
        - name: spring-jooq-k8s
          imagePullPolicy: Always
          image: gerasimovv88/spring-jooq-k8s:1.0.0-SNAPSHOT
          ports:
            - containerPort: 8080
          resources:
            requests:
              memory: 256Mi
              cpu: 500m
            limits:
              memory: 512Mi
              cpu: 1000m
          livenessProbe:
            httpGet:
              path: /actuator/health/liveness
              port: 8080
            initialDelaySeconds: 20
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 7
          readinessProbe:
            httpGet:
              path: /actuator/health/readiness
              port: 8080
            initialDelaySeconds: 15
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3
          volumeMounts:
            - name: logback-config
              mountPath: "/app/config"
      volumes:
        - name: logback-config
          configMap:
            name: spring-jooq-k8s-config-map
            items:
              - key: logback.xml
                path: logback.xml
