manifests/istio/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: spring-jooq-k8s-service
spec:
  type: NodePort
  selector:
    app: spring-jooq-k8s-deployment
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31001
